--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pyrogram~=2.0.35
+pyrogram==2.0.106
 tgcrypto==1.2.5
-pymongo[srv]==3.12.3
-motor>=3.3.2
+pymongo[srv]==4.8.0
+motor==3.6.0
 marshmallow==3.14.1
 umongo==3.0.1
